# saqc

./: .coverage  .gitattributes  .gitignore  .gitignore~  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  README.md  Readme.md  compatFlagger_only.patch  config.py  core.py  environment.yml  index.md  index.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py
Functions/: breaks.py  changepoints.py  constants.py  curvefit.py  drift.py  flagtools.py  generic.py  interpolation.py  module_dict.pkl  noise.py  outliers.py  pattern.py  resampling.py  residues.py  rolling.py  saqc.py  scores.py  tools.py  transformation.py
dios/: .gitignore  Readme.md  __init__.py  requirements.txt  setup.py
docs/: ConfigurationFiles.md  Customizations.md  FlaggingSchemes.md  FunctionDescriptions.md  FunctionIndex.md  FunctionSignatures.md  FunctionsSignatures.md  GenericFunctions.md  GettingStarted.md  Makefile  ParameterDescriptions.md  conf.py  index.rst  make.bat  requirements.txt
dsl/: __init__.py  evaluator.py  parser.py
flagger/: __init__.py  abstractflagger.py  baseflagger.py  dmpflagger.py  positionalflagger.py  simpleflagger.py
funcSummaries/: changepoints.rst  flagtools.rst  saqc.rst
funcs/: __init__.py  funcs.py  functions.py
lib/: tools.py  types.py
resources/: meta.csv
saqc/: __init__.py  __main__.py  _version.py  common.py  constants.py  exceptions.py  options.py  version.py
scripts/: signatures.py
sphinx-doc/: .gitignore  FlagFunctions.rst  Makefile  conf.py  flagger.rst  flags.rst  index.rst  (+6 more)
(+563 files in other folders)
